syntax = 'proto3';
package tasks;

service TasksService {
  rpc getAll(EmptyArgument) returns (TaskList); 
}

message EmptyArgument {}

message TaskList { 
  repeated Task tasks = 1;
}

message Task {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
}

